traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:8: error: 'case' expected but identifier found.
    Direction.EST => gauche();murAuNord = estFaceMur();droite()
    ^Snake:8: error: '}' expected but ';' found.
    Direction.EST => gauche();murAuNord = estFaceMur();droite()
                             ^Snake:9: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
    Direction.OUEST => droite();murAuNord = estFaceMur();gauche()
              ^Snake:17: error: expected class or object definition
def avanceSerpent() {
^Snake:36: error: expected start of definition
override def run() {
         ^Snake:45: error: eof expected but '}' found.
}
^